Made proper tests. Added capacity, isFull(), clean() in Array and Linked Queue